Added background color to make text more readable

--- a/ex3/index.html
+++ b/ex3/index.html
@@ -11,11 +11,12 @@
     Farkle, and Felicia. Everything in here has a story
     and a scent. If there's one thing I've learned after
     23 years, you never know WHAT is gonna come into my swamp.
-    </p>
-    <p class="shrek"> My Favorite Websites </p>
+    <br><br>
+    My Favorite Websites
     <a href="https://www.epicgames.com/fortnite/en-US/buy-now/battle-royale" target="_blank">Fortnite</a><br>
     <a href="https://money.cnn.com/data/markets/" target="_blank">Markets</a><br>
     <a href="http://www.youku.com/" target="_blank">Youtube</a><br>
+    </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-oJ9KYkn0ys" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </body>
 </html>
