--- a/ex3/index.html
+++ b/ex3/index.html
@@ -12,8 +12,8 @@
     and a scent. If there's one thing I've learned after
     23 years, you never know WHAT is gonna come into my swamp.
     <br><br>
-    My Favorite Websites
-    <a href="https://www.epicgames.com/fortnite/en-US/buy-now/battle-royale" target="_blank">Fortnite</a><br>
+    My Favorite Websites<br>
+    <a href="https://www.epicgames.com/fortnite/en-US/news" target="_blank">Fortnite</a><br>
     <a href="https://money.cnn.com/data/markets/" target="_blank">Markets</a><br>
     <a href="http://www.youku.com/" target="_blank">Youtube</a><br>
     </p>
