Added stuff for uploaded page

--- a/ex4/index.html
+++ b/ex4/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
     <title>Color Changer</title>
-    <link href="colorchanger.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="colorchanger.js"></script>
   </head>
   <body>
-    <p id="maintext">
+    <p id="maintext" style="width: 500">
       According to all known laws of aviation,
       there is no way a bee should be able to fly.
       Its wings are too small to get its fat little body off the ground.
