Added more pictures to the slide show

--- a/ex1/index.html
+++ b/ex1/index.html
@@ -10,6 +10,6 @@
       Confirm your password:<br>
       <input type="text" id="second">
     </p>
-    <button onclick="validate()">Validate</button>
+    <button id="button" onclick="validate()">Validate</button>
   </body>
 </html>
