--- a/ex3/index.html
+++ b/ex3/index.html
@@ -4,19 +4,31 @@
     <title>Personal Profile</title>
   </head>
   <body>
-    <img src="https://i.pinimg.com/originals/76/92/79/76927939ad6134c1b5b0fa472803ca4b.png">
-    <p class="shrek">
-    Hello, my name is Shrek, and this is my swamp.I live
-    here with my wife, Fiona, and my three kids, Fergus,
-    Farkle, and Felicia. Everything in here has a story
-    and a scent. If there's one thing I've learned after
-    23 years, you never know WHAT is gonna come into my swamp.
-    <br><br>
-    My Favorite Websites<br>
-    <a href="https://www.epicgames.com/fortnite/en-US/news" target="_blank">Fortnite</a><br>
-    <a href="https://money.cnn.com/data/markets/" target="_blank">Markets</a><br>
-    <a href="http://www.youku.com/" target="_blank">Youtube</a><br>
-    </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-oJ9KYkn0ys" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <table align="center" cellpadding="50px" cellwidth="100px">
+      <tr>
+        <td>
+          <img src="https://i.pinimg.com/originals/76/92/79/76927939ad6134c1b5b0fa472803ca4b.png">
+        </td>
+        <td>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-oJ9KYkn0ys" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p class="shrek">
+            Hello, my name is Shrek, and this is my swamp.I live
+            here with my wife, Fiona, and my three kids, Fergus,
+            Farkle, and Felicia. Everything in here has a story
+            and a scent. One thing I've learned after 23 years -
+            you never know WHAT is gonna come into my swamp.
+          </p>
+        </td>
+        <td>
+          <p class="shrek">My Favorite Websites<br></p>
+          <a href="https://www.epicgames.com/fortnite/en-US/news" target="_blank">Fortnite</a><br>
+          <a href="https://money.cnn.com/data/markets/" target="_blank">Markets</a><br>
+          <a href="http://www.youku.com/" target="_blank">Youtube</a><br>
+        </td>
+      </table>
   </body>
 </html>
