Fixed border width and style

--- a/ex4/colorchanger.html
+++ b/ex4/colorchanger.html
@@ -3,8 +3,8 @@
     <title>Color Changer</title>
     <script type="text/javascript" src="colorchanger.js"></script>
   </head>
-  <body>
-    <p id="maintext" style="width: 500">
+  <body style="background-color: grey">
+    <p id="maintext" style="width: 500; border-width: 5px; border-style: solid">
       According to all known laws of aviation,
       there is no way a bee should be able to fly.
       Its wings are too small to get its fat little body off the ground.
