--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body style="background-image: url(wallpaper2you_347831.jpg); background-repeat: no-repeat; background-size: 100%">
     <p>Hello everyone, and welcome to my page! Here below is all the stuff I've done for 448</p>
-    <a href="validator.html">Password Validator</a><br>
-    <a href="slideshow.html">Slide Show</a><br>
-    <a href="profile.html">Personal Profile</a><Br>
-    <a href="colorchanger.html">Color Changer</a><br>
+    <a href="ex1/validator.html">Password Validator</a><br>
+    <a href="ex2/slideshow.html">Slide Show</a><br>
+    <a href="ex3/profile.html">Personal Profile</a><Br>
+    <a href="ex4/colorchanger.html">Color Changer</a><br>
   </body>
 </html>
