Linked profile back to home page

--- a/ex3/profile.html
+++ b/ex3/profile.html
@@ -4,6 +4,7 @@
     <title>Personal Profile</title>
   </head>
   <body>
+    <a href="../index.html">Back to Home Page</a>
     <table align="center" cellpadding="50px" cellwidth="100px">
       <tr>
         <td>
