Home page style changes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
     <link href="main.css" rel="stylesheet" type="text/css">
     <title>Adam Khan</title>
   </head>
-  <body style="background-image: url(wallpaper2you_347831.jpg); background-repeat: no-repeat; background-size: 100%">
-    <p>Hello everyone, and welcome to my page! Here below is all the stuff I've done for 448</p>
-    <a href="ex1/validator.html">Password Validator</a><br>
-    <a href="ex2/slideshow.html">Slide Show</a><br>
-    <a href="ex3/profile.html">Personal Profile</a><Br>
-    <a href="ex4/colorchanger.html">Color Changer</a><br>
+  <body style="background-image: url(wallpaper2you_347831.jpg); background-repeat: no-repeat; background-size: 100%; background-color: black">
+    <div align="center">
+      <div class="grid-container">
+        <p>Hello everyone, and welcome to my page! Here below is all the stuff I've done for 448</p>
+        <block id="link1">
+          <a href="ex1/validator.html">Password Validator</a>
+        </block><br><br>
+        <block id="link2">
+          <a href="ex2/slideshow.html">Slide Show</a>
+        </block><br><br>
+        <block id="link3">
+          <a href="ex3/profile.html">Personal Profile</a>
+        </block><br><br>
+        <block id="link4">
+          <a href="ex4/colorchanger.html">Color Changer</a>
+        </block>
+      </div>
+    </div>
   </body>
 </html>
