Changed blocks to divs

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <div align="center">
       <div class="grid-container">
         <p>Hello everyone, and welcome to my page! Here below is all the stuff I've done for 448</p>
-        <block id="link1">
+        <div id="link1">
           <a href="ex1/validator.html">Password Validator</a>
-        </block><br><br>
-        <block id="link2">
+        </div><br><br>
+        <div id="link2">
           <a href="ex2/slideshow.html">Slide Show</a>
-        </block><br><br>
-        <block id="link3">
+        </div><br><br>
+        <div id="link3">
           <a href="ex3/profile.html">Personal Profile</a>
-        </block><br><br>
-        <block id="link4">
+        </div><br><br>
+        <div id="link4">
           <a href="ex4/colorchanger.html">Color Changer</a>
-        </block>
+        </div>
       </div>
     </div>
   </body>
