--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <html>
   <head>
+    <script type="text/javascript" src="main.js"></script>
     <link href="main.css" rel="stylesheet" type="text/css">
     <title>Adam Khan</title>
   </head>
-  <body style="background-image: url(wallpaper2you_347831.jpg); background-repeat: no-repeat; background-size: 100%; background-color: black">
+  <body style="background-image: url(wallpaper2you_347831.jpg)">
+    <div><?php include 'l4ex1.php';?></div>
     <div align="center">
       <div class="grid-container">
         <p>Hello everyone, and welcome to my page! Here below is all the stuff I've done for 448</p>
-        <div id="link1">
+        <div id="link1" class="linkholder">
           <a href="ex1/validator.html">Password Validator</a>
-        </div><br><br>
-        <div id="link2">
+        </div>
+        <div id="link2" class="linkholder">
           <a href="ex2/slideshow.html">Slide Show</a>
-        </div><br><br>
-        <div id="link3">
+        </div>
+        <div id="link3" class="linkholder">
           <a href="ex3/profile.html">Personal Profile</a>
-        </div><br><br>
-        <div id="link4">
+        </div>
+        <div id="link4" class="linkholder">
           <a href="ex4/colorchanger.html">Color Changer</a>
+        </div>
+        <div id="link5" class="linkholder">
+          <a href="l4ex1/multtable.html">Multiplication Table</a>
+        </div>
+        <div id="link6" class="linkholder">
+          <a href="l4ex2/quiz.html">Quiz</a>
+        </div>
+        <div id="link7" class="linkholder">
+          <a href="l4ex3/customerFrontend.html">Store</a>
         </div>
       </div>
     </div>
